font fix and math exam border and spacing fix

--- a/results/static/css/app.css
+++ b/results/static/css/app.css
@@ -1,7 +1,8 @@
 
-
+/* old font
 @import url('https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap');
-  /* START OF general styling */
+*/
+/* START OF general styling */
 
 body{
   background-color: #000;
@@ -44,7 +45,7 @@ body{
   .ca-bold {
     font-weight: 900;
     text-align: left;
-    font-family: 'Pathway Gothic One';
+    font-family: 'mainFont';
   }
 
   .ca-italic {
@@ -62,7 +63,7 @@ body{
   .ca-inline-b {
     display: inline-block;
     width: auto;
-    font-family: 'Pathway Gothic One';
+    font-family: 'mainFont';
   }
 
   hr {
@@ -79,7 +80,7 @@ body{
   /* END OF general styling */
 
   .ca-container {
-    font-family: 'Pathway Gothic One';
+    font-family: 'mainFont';
     font-size: 18px;
     line-height: 1.2;
     letter-spacing: 0px;
@@ -101,14 +102,14 @@ body{
   h2 {
     color: #66a1a5;
     margin-bottom: 10px;
-    font-family: 'Pathway Gothic One';
+    font-family: 'mainFont';
     font-weight: 900;
     margin-top: 0px;
   }
 
   h3 {
     margin-bottom: 10px;
-    font-family: 'Pathway Gothic One';
+    font-family: 'mainFont';
     font-weight: 900;
     margin-top: 0px;
     font-size: 22px;
@@ -417,3 +418,54 @@ top: -6px;
 h2.ca-flex-full {
     margin-bottom: 30px;
 }
+
+/* START OF diagnostic score report */
+.bubble {
+  position: relative;
+  margin-bottom: 40px;
+  margin-left: 30px;
+}
+
+.bubble-triangle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.bubble-rect {
+  width: 190px;
+  height: 112px;
+  background-color: rgb(246,246,246);
+  display: inline-block;
+  margin-left: 16px;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.overall-perf-score {
+  width: 100%;
+  margin-right: 30px;
+  border: 2px #66a1a5 solid;
+  box-sizing: border-box;
+}
+
+.overall-perf-score-header {
+  padding: 10px 30px;
+  color: white;
+  background-color: #66a1a5;
+  font-weight: 900;
+  font-size: 24px;
+}
+
+.overall-perf-score-num {
+  padding: 10px 30px 10px;
+  font-size: 50px;
+  display: inline-block;
+}
+
+.overall-perf-message {
+  background-color: rgb(246,246,246);
+  padding: 20px;
+  margin-top: 35px;
+}
+/* END OF diagnostic score report */
